<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Lab9</string>
    <string name="action_settings">Settings</string>
    <string name="courses_title">Courses</string>
    <string name="course_crn_label">CRN:</string>
    <string name="course_title_label">Course:</string>
    <string name="course_enrolled_label">Enrolled:</string>
    <string name="course_capacity_label">Capacity:</string>
    <string name="add_student_label">Add Student</string>
    <string name="drop_student_label">Drop Student</string>
    <string name="title_activity_second">Second Activity</string>
    <string name="title_activity_course">Course Details</string>
    <string name="msg_no_students">There are no more students to drop!</string>
    <string name="add_button_name">Add Section</string>
    <string name="delete_button_name">Delete Section(s)</string>
    <string name="delete_dialog_title">Warning</string>
    <string name="delete_button_yes">Delete</string>
    <string name="delete_button_no">Cancel</string>
    <string name="button_cancel">Cancel</string>

</resources>
